[package]
name = "bt"
version = "0.1.0"
edition = "2021"
authors = ["YeLi <i@yeli.io>"]
description = "The Bangumi Tools for BT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cmd"

[[bin]]
name = "web_api"

[dependencies]
typed-builder = "0.18.2"
qbit-rs = "0.4.2"
regex = "1.10.3"
reqwest = "0.12.4"
serde = { version = "1.0.195", features = ["derive", "std"] }
serde_json = "1.0.114"
serde-xml-rs = "0.6.0"
serde_bencode = "0.2.4"
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenvy = "0.15.0"
clap = { version = "4.5.1", features = ["derive"] }
anyhow = { version = "1.0.44", features = ["std"] }
thiserror = "1.0.57"
log = "0.4.21"
env_logger = "0.11.3"
strum = "0.26.1"
strum_macros = "0.26.1"
async-trait = "0.1.77"
sha1 = "0.10.6"
sha2 = "0.10.8"
hex = "0.4.3"
base64 = "0.22.0"
chrono = "0.4.35"
actix-web = "4"
actix-http = "3.6.0"
teloxide-core = "0.9.1"
once_cell = "1.19.0"
lru = "0.12.3"
